Fix overflow on small screen bug

--- a/website template/scss/admin-panel.scss
+++ b/website template/scss/admin-panel.scss
@@ -5,8 +5,11 @@ $top-height: 60px;
 
 html,
 body {
-  overflow-x: hidden;
   margin: 0;
+}
+
+body {
+  overflow-x: hidden;
 }
 
 .collapsing {
